apps/media/vnc/k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: vnc
  name: vnc
  namespace: media
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vnc
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vnc
    spec:
      nodeSelector:
        kubernetes.io/hostname: lap-dell
      terminationGracePeriodSeconds: 30
      containers:
      - image: rmikl/vnc_server:86865ff1301e43851f03dfbd7fbb5bca0064d937
        securityContext:
          privileged: true
          allowPrivilegeEscalation: true
          capabilities:
            add: ["SYS_ADMIN"]
        name: vnc-http
        command:
        - /bin/bash
        - -c
        - |
          /vnc-script/init.sh
          /init
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/bash
              - -c
              - |
                sudo pgrep firefox | xargs -I {} sudo kill -9 {} || true
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          limits:
            gpu.intel.com/i915: "1"       
        volumeMounts:
        - mountPath: /vnc-script
          name: vnc-init
        - mountPath: /kube
          name: secret-volume
        - mountPath: /mnt/qnap
          name: vnc-base
        - name: containerd-sock
          mountPath: /run/containerd
        - name: vnc-rc
          mountPath: /init-config
        - name: vnc-mozilla
          mountPath: /config/.mozilla
        - name: vnc-vscode
          mountPath: /config/.vscode
      volumes:
      - name: vnc-base
        persistentVolumeClaim:
          claimName: vnc-base
      - name: vnc-mozilla
        persistentVolumeClaim:
          claimName: vnc-mozilla
      - name: vnc-vscode
        persistentVolumeClaim:
          claimName: vnc-vscode
      - name: vnc-init
        configMap:
          name: vnc-config-files
          items:
          - key: init.sh
            path: init.sh
          defaultMode: 0777  
      - name: vnc-rc 
        configMap:
          name: vnc-config-files
          items:
          - key: .zshrc
            path: .zshrc
          - key: .gitconfig
            path: .gitconfig
          defaultMode: 0777 
      - name: secret-volume
        secret:
          defaultMode: 420
          items:
          - key: KUBECONFIG
            path: config
          secretName: vnc-credentials
      - name: containerd-sock
        hostPath:
          path: /run/containerd
          type: Directory
