apps/media/vnc/k8s-manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vnc
  namespace: media
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/name: vnc
  type: ClusterIP
